--- a/index.html
+++ b/index.html
@@ -1,65 +1,181 @@
 <!DOCTYPE html>
-    <html lang="en">
-        <head>
-<!-- New title + create favicon (img displayed next to page title in the browser tab)
-            <title>Interactive Media</title>
-            <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-!-->
-            <style>    
-/* define background image or colour   
-                body {
-                    background-image: url('____');
-                    background-repeat: no-repeat;
-                    background-attachment: fixed;
-                    background-size: cover;
-                }
- */
-                * {
-                    margin: 0;
-                    padding: 0;
-                    border: none;}           
- 
- body {
-                    background-color: purple
-                }
-                #box1 {
-                    background-color: black;
-                    color: red;
-                }
-                #box2 {
-                    background-color: blueviolet;
-                }
-                #box3 {
-                    background-color: rgb(0, 41, 245);
-                    color: white;                }
-                h1 {
-                    font-size:600%;
-                    text-align:center;  
-                }
-/*
-                img {
-                    position: relative;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover; /* Ensures the image covers the entire viewport */
-                }
-*/
-            </style>
-        </head>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/png" href="workbook/img/logo/favicon_littleguy.png">  
+        <title>WIP WIPPITY</title>   
+    </head>
+    <body>
+        <header> 
+            <div class="left">
+                <h1>"[ WIP ]"</h1>
+            </div>
+            <div class="scrolling-text-container">
+                <div class="scrolling-text-01">
+                    * Attn. visitors: the monkeys say it all * <!--Alt text. Be nice to my monkeys -->
+                </div>
+            </div>
+            <div class="right">
+                <p>|<Λ+ΛN1K$CHØ||3R</p>
+                <p>#1307194</p>
+            </div>
+        </header>
+        <div class="draggable" id="dragqueen">
+            <p>WELCOME GREETINGS BONJOUR!!! <br>
+            Whilst I am surely losing my mind in the process, this is also the freakin' best & I'm obsessed <br>
+            Everything's all wip wippity; a delicious work in progress <br>
+            Bon ap! ( ˘ ³˘)‎°｡⋆♡‧₊˚</p>
+        </div>
+        <div class="draggable" id="dragqueensis">
+            <p>GRAYSCALE 
+                <br>
+                YOUR
+                <br>
+                PHONE
+                <br>
+                YOU'RE 
+                <br>
+                GETTING 
+                <br>
+                DISTRACTED!!!</p>
+        </div>
+        <div class="draggable" id="dragqueenbrew">
+            <p>Should my laptop cook itself right now, I would 100% no joke I kid you fucking not, launch myself off this god damn balcony</p>
+        </div>
+        <div class="draggable" id="dragqueencus">
+            <p>It's not about perfection, it's about joy — Yes thank you gg</p>
+        </div>
+        <div class="draggable" id="dragqueenpapa">
+            <p>I want, I like</p>
+            <a href="https://happyvalleyshop.com/products/the-creative-act-a-way-of-being-hardback?variant=43389733667064&currency=AUD&utm_medium=product_sync&utm_source=google&utm_content=sag_organic&utm_campaign=sag_organic&utm_campaign=gs-2020-06-30&utm_source=google&utm_medium=smart_campaign&gad_source=1&gclid=CjwKCAjwkuqvBhAQEiwA65XxQJQTLoebydphsBNSY9ul2c-HKCey2uRBPeo9OHuanpr3anDsOex48xoC4ksQAvD_BwE">THE CREATIVE ACT: A WAY OF BEING</a>
+        </div>
+        <div class="draggable" id="dragqueenmama">
+            <p>This is cool, but also call your mother</p>
+        </div>
+        <div class="draggable" id="dragqueengrandmama">
+            <p>Design: custom cursor, GIFs that serve, make 3 boxes responsive to horizontal scrolling, make monkeys dance upon hover, add web insp  </p>
+        </div>
+        <div class="draggable" id="dragqueengrandpapa">
+            <p>Stop forgetting to drink water for 100hrs, don't do that</p>
+        </div>
+        <div class="draggable" id="dragqueentante">
+            <p>It's be brilliant if all of these were actually neatly stacked directly on top of the other and you had to 'rip them away' like actual sticky notes to get to the bottom</p>
+        </div>
+        <div class="draggable" id="dragqueenunc">
+            <p>Okay no genius work is going to happen past 01:00</p>
+            <br>
+            <p>You're losing it, go to bed</p>
+        </div>
+        <div class="draggable" id="dragqueenwitch">
+            <p>HANG UP YOUR WASHING!</p>
+        </div>
+        <img id="flyingImage" src="/workbook/img/monkeys/Chiqui01.png">
+        <img id="fallingImage" src="/workbook/img/monkeys/Chiqui02.png"> 
+        <img id="floatinginbottomImage" src="/workbook/img/monkeys/Chiqui03.png">
+        <img id="flyinlefty" src="/workbook/img/monkeys/Chiqui04.png">
+        <div id="box1" class="box bw-effect" style="display: flex;">
+            <div style="flex: 1;"> <!-- LEFT COLUMN -->
+                <h2>BOX 1</h2>
+                <br>
+                <pre>code documentation,   ske  tc   hes,   wireframes,    research</pre>
+                <pre>code documentation,   ske  tc   hes,   wireframes,    research </pre>
+                <pre>code documentation,   ske  tc   hes,   wireframes,    research </pre>
+                <pre>code documentation,   ske  tc   hes,   wireframes,    research</pre>
+                <pre>code documentation,   ske  tc   hes,   wireframes,    research </pre>
+                <pre>code documentation,   ske  tc   hes,   wireframes,    research </pre>
+                <pre>code documentation,   ske  tc   hes,   wireframes,    research</pre>
+                <pre>code documentation,   ske  tc   hes,   wireframes,    research </pre>
+                <pre>code  doc  um enta  tion,   ske  tc   hes,   wireframes, researchhh</pre>
+                <pre>code d        men   tation,   ske  tc   hes,  wireframes,research </pre>
+                <pre>                            tc   hes,   wireframes,    research </pre>
+                <pre>                            tc   hes,   wireframes,    research </pre>
+                <pre>    d       men   tation,   ske  t   h,   wireframes,    ree rch </pre>
+                <pre>c          men   tn,   ske  t  hes,   wirefr  m es,    rch </pre>
+                <pre>         men              wire  fr     m  es ,    r h </pre>
+                <pre>         men              wire  fr     m  es ,    r h </pre>
+                <pre>                                       m  es ,    r h </pre>
+                <pre>                                       m  es ,    r h </pre>
+                <pre>                                       m  es ,    r h </pre>
+                <pre>                                       m  es ,    r h </pre>
+                <pre>                                       m  es ,    r h </pre>
+                <pre>                                       m  es ,    r h </pre>
+                <pre>                                       m  es ,    r h </pre>
+            </div>          
+            <div style="flex: 1;"> <!-- MIDDLE COLUMN -->
+                <div class="GIFimageContainer">
+                    <img class="baseimage" src="/workbook/img/gif/artboard01.gif">
+                    <div class="hoverArea bottomRight">
+                        <img class="hoverImage" src="/workbook/img/gif/artboard15.png">
+                    </div>
+                    <div class="hoverArea topRight">
+                        <img class="hoverImage" src="/workbook/img/gif/Artboard24.png">
+                    </div>
+                </div>
+                <pre>^ this needs to be a GIF, but I finally made the code work for this hover over each corner effect and I need it...            for later, so this stays, this is my placeholder</pre>
+                <pre>but eventually yes this will flash, it will take major, it will be cool</pre>
+            </div>
+            <div style="flex: 1;"> <!-- RIGHT COLUMN -->
+                <h2>NØ+3$+Ø$3||=</h2>
+            </div>
+        </div>
+        <div id="box2" class="box bw-effect">
+            <h2>BOX 2</h2>
+            <br><br><br><br>
+            <pre>THIS SPACE SHALL SLAP</pre>
+            <br>
+            <p>i got an awful habit of not documentating my work 'progress' as i go along, it needs to be aesthetic or i wail – all of that will eventually go here </p>
+        </div>
+        <div id="box3" class="box bw-effect">
+            <h2>BOX 3</h2>
+            <br><br><br><br>
+            <pre>THIS SPACE SHALL ALSO SLAP</pre>
+            <br>
+            <p>think i'll take that hover over each corner effect and put it here, showcase my web design insp — main img of site feat close-ups of cool sections </p>
+        </div>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                // Get all elements with the "draggable" class
+                var draggables = document.querySelectorAll('.draggable');
 
-        <body>
-            <div id="box1">
-                <h1>Box 1</h1>
-                <a href="https://www.instagram.com/anikkat__/">IG</a>
-            </div>
-            <div id="box2">
-                <h1>Box 2</h1>
-            </div>
-            <div id="box3">
-                <h1>Box 3</h1>
-            </div>
+                // Loop through each draggable element
+                draggables.forEach(function(draggable) {
+                    // Variables to store mouse position and element position offset
+                    var offsetX, offsetY;
 
-         </body>
-     </html>
+                    // Add mousedown event listener to start dragging
+                    draggable.addEventListener('mousedown', function(event) {
+                        // Calculate the offset from the mouse position to the top-left corner of the element at the time of click
+                        offsetX = event.clientX - draggable.getBoundingClientRect().left;
+                        offsetY = event.clientY - draggable.getBoundingClientRect().top;
+
+                        // Add mousemove event listener to handle dragging
+                        document.addEventListener('mousemove', dragElement);
+
+                        // Prevent default browser behavior
+                        event.preventDefault();
+                    });
+
+                    // Function to handle dragging
+                    function dragElement(event) {
+                        // Calculate the new position of the element based on the mouse movement
+                        var newPosX = event.clientX - offsetX;
+                        var newPosY = event.clientY - offsetY;
+
+                        // Update element position
+                        draggable.style.left = newPosX + 'px';
+                        draggable.style.top = newPosY + 'px';
+
+                        // Prevent default browser behavior
+                        event.preventDefault();
+                    }
+
+                    // Add mouseup event listener to stop dragging
+                    document.addEventListener('mouseup', function(event) {
+                        // Remove mousemove event listener to stop dragging
+                        document.removeEventListener('mousemove', dragElement);
+                    });
+                });
+            });
+        </script>
+    </body>
+</html>
